traduction+navbar_profil

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -50,16 +50,16 @@
   }
 });
 
-document.addEventListener('turbo:load', () => {
-  // Écouteur pour le focus sur le champ de texte
-  document.getElementById('chat-text').addEventListener('focus', function() {
-    document.querySelector('.navbar').style.display = 'none';
-  });
+// document.addEventListener('turbo:load', () => {
+//   // Écouteur pour le focus sur le champ de texte
+//   document.getElementById('chat-text').addEventListener('focus', function() {
+//     document.querySelector('.navbar').style.display = 'none';
+//   });
 
-  // Écouteur pour le blur sur le champ de texte
-  document.getElementById('chat-text').addEventListener('blur', function() {
-    document.querySelector('.navbar').style.display = 'block';
-  });
-});
+//   // Écouteur pour le blur sur le champ de texte
+//   document.getElementById('chat-text').addEventListener('blur', function() {
+//     document.querySelector('.navbar').style.display = 'block';
+//   });
+// });
 
 </script>
