--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,8 +5,7 @@ body {
 .navbar {
   justify-content: space-around;
   position: fixed;
-  margin-top: 10px;
-  bottom: 10px; /* Ajustez cette valeur */
+  bottom: 10px;
   width: 100%;
   height: 70px;
   z-index: 999;
