--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-12 col-lg-12 mx-auto">
 
-      <h2>Change your password</h2>
+      <h2>Changer mon mot de passe</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
         <%= f.error_notification %>
@@ -12,23 +12,48 @@
 
         <div class="form-inputs">
           <%= f.input :password,
-                      label: "New password",
+                      label: "Nouveau mot de passe",
                       required: true,
                       autofocus: true,
-                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length),
                       input_html: { autocomplete: "new-password" } %>
           <%= f.input :password_confirmation,
-                      label: "Confirm your new password",
+                      label: "Confirmez votre nouveau mot de passe",
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Change my password" %>
+          <%= f.button :submit, "Changer mon mot de passe" %>
         </div>
       <% end %>
 
-      <%= render "devise/shared/links" %>
+      <%- if controller_name != 'sessions' %>
+        <%= link_to "Se connecter", new_session_path(resource_name) %><br />
+      <% end %>
+
+      <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+        <%= link_to "S'inscrire", new_registration_path(resource_name) %><br />
+      <% end %>
+
+      <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+        <%= link_to "Mot de passe oublié ?", new_password_path(resource_name) %><br />
+      <% end %>
+
+      <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+        <%= link_to "Vous n'avez pas reçu les instructions de confirmation ?", new_confirmation_path(resource_name) %><br />
+      <% end %>
+
+      <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+        <%= link_to "Vous n'avez pas reçu les instructions de déverrouillage ?", new_unlock_path(resource_name) %><br />
+      <% end %>
+
+      <%- if devise_mapping.omniauthable? %>
+        <%- resource_class.omniauth_providers.each do |provider| %>
+          <%= button_to "Se connecter avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+        <% end %>
+      <% end %>
+
     </div>
   </div>
 </div>
