input form joli

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -40,3 +40,17 @@ font-family: "Montserrat";
 .linkedin{
   display: flex;
 }
+
+
+.linkedin-form-1{
+  background-color: E6E9EB;
+    border-radius: 15px;
+    font-size: xx-small;
+  }
+
+.linkedin-form-2{
+    background-color: E6E9EB;
+      border-radius: 15px;
+      font-size: xx-small;
+      color: red
+    }
