--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,26 @@
           <input type="text" id="search-input" class="search-input" placeholder="Où souhaitez-vous télétravailler?" type="button">
           <input type="hidden" id="search-query" name="query">
         </div>
+          <div class="form-group col-sm-8">
+    <div id="myMultiselect" class="multiselect">
+      <div id="mySelectLabel" class="selectBox" onclick="toggleCheckboxArea()">
+        <div class="overSelect"></div>
+      </div>
+      <div id="mySelectOptions">
+        <input type="checkbox" id="calm" value="calm" class="tag-selector" />
+          <label for="calm"> <i class="fa-solid fa-volume-high fa-2xl" style="color: #CDCBD2;"> </i> </label>
+        <input type="checkbox" id="internet" value="internet" />
+          <label for="internet"> <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i> </label>
+        <input type="checkbox" id="smoking" value="smoking" />
+          <label for="three"> <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i> </label>
+        <input type="checkbox" id="animals" value="animals" />
+          <label for="four"> <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i></label>
+        <input type="checkbox" id="five" value="five" />
+         <label for="five"> <i class="fa-solid fa-wrench fa-2xl" style="color: #004792;"></i> </label>
+      </div>
+    </div>
+  </div>
+</div>
       </form>
     </div>
   </div>
@@ -54,32 +74,6 @@
     </div>
   </div>
 
-<%#
-    <div class="col-5 col-md-5 mb-4"> <!-- Utilisation de col-12 pour la disposition sur mobile et col-md-6 pour la disposition sur les écrans plus larges -->
-    <a href="<%= workspaces_path%> <!-- Ajout du lien autour de la carte -->
-<%#
-      <article class="card">
-        <img
-          class="card__background"
-          src="https://i.ibb.co/Q9Pzk5z/Large-SCH-2021-EPICERIE-mannequin-TELETRAVAIL-070.jpg"
-          alt="Photo d'un bureau en hauteur"
-          width="1920"
-          height="2193"
-        />
-        <div class="card__content | flow">
-          <div class="card__content--container | flow">
-            <h2 style="font-size: 14px;" class="card__title">Chez Déborah</h2>
-            <p style="font-size: 9px;"  class="card__description">
-              Ambiance studieuse - Fumeur refusé - Un chien mignon
-            </p>
-          </div>
-          <button style="font-size: 9px;" class="card__button">J'aime</button>
-        </div>
-      </article>
-    </div>
-  </div>
-</div> %>
-<%# </a> %>
 <div class="container">
   <div class="mt-3">
     <h2 style="font-size: 35px;">Je souhaite proposer un workspace</h2>
