--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
         <%= link_to image_tag(@current_page == 'chatrooms' ? 'svg/Chat-icon-orange.svg' : 'svg/Chat-icon-gray.svg', class: "nav-link", style: "width: 70%;"), chatrooms_path %>
       </li>
       <li class="nav-item">
-        <%= link_to image_tag((devise_controller? || @current_page == 'profil') ? 'svg/Profil-icon-orange.svg' : 'svg/Profil-icon-gray.svg', class: "nav-link", style: "width: 70%;"), profile_path %>
+        <%= link_to image_tag((devise_controller? || @current_page == 'profil') ? 'svg/Profil-icon-orange.svg' : 'svg/Profil-icon-gray.svg', class: "nav-link", style: "width: 70%;"), profil_path %>
       </li>
     </ul>
   </div>
