--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,36 +10,27 @@
   <div class="row">
       <form id="search-form" action="<%= workspaces_path %>" method="GET">
         <div class="search-container">
-          <input type="text" id="search-input" class="search-input" placeholder="Où souhaitez-vous télétravailler?" type="button">
-          <input type="hidden" id="search-query" name="query">
+          <input type="text" id="search-input" class="search-input" placeholder="Où souhaitez-vous télétravailler?" name="query">
         </div>
-          <div class="form-group col-sm-8">
-    <div id="myMultiselect" class="multiselect">
-      <div id="mySelectLabel" class="selectBox" onclick="toggleCheckboxArea()">
-        <div class="overSelect"></div>
-      </div>
-      <div id="mySelectOptions">
-        <input type="checkbox" id="calm" value="calm" class="tag-selector" />
-          <label for="calm"> <i class="fa-solid fa-volume-high fa-2xl" style="color: #CDCBD2;"> </i> </label>
-        <input type="checkbox" id="internet" value="internet" />
-          <label for="internet"> <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i> </label>
-        <input type="checkbox" id="smoking" value="smoking" />
-          <label for="three"> <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i> </label>
-        <input type="checkbox" id="animals" value="animals" />
-          <label for="four"> <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i></label>
-        <input type="checkbox" id="five" value="five" />
-         <label for="five"> <i class="fa-solid fa-wrench fa-2xl" style="color: #004792;"></i> </label>
-      </div>
-    </div>
-  </div>
-</div>
+        <div class="form-group col-sm-8">
+          <input type="checkbox" id="ambiance" name="ambiance" class="tag-selector" />
+          <label for="ambiance"> <i class="fa-solid fa-volume-high fa-2xl" style="color: #CDCBD2;"> </i> </label>
+          <input type="checkbox" id="internet_connexion" name="internet_connexion" class="tag-selector" />
+          <label for="internet_connexion"> <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i> </label>
+          <input type="checkbox" id="smoking" name="smoking" class="tag-selector" />
+          <label for="smoking"> <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i> </label>
+          <input type="checkbox" id="animals" name="animals" class="tag-selector" />
+          <label for="animals"> <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i> </label>
+          <input type="checkbox" id="skills" name="skills" class="tag-selector"/>
+          <label for="skills"> <i class="fa-solid fa-wrench fa-2xl" style="color: #004792;"></i> </label>
+        </div>
+        <button type="submit"> filtrer </button>
       </form>
     </div>
   </div>
-</div>
 <div class="container">
   <div class="mt-4">
-    <h2 style="font-size: 20px;">Populaires</h2>
+    <h2 style="font-size: 25px;">Populaires</h2>
   </div>
 </div>
 <div class="container">
@@ -76,7 +67,7 @@
 
 <div class="container">
   <div class="mt-3">
-    <h2 style="font-size: 35px;">Je souhaite proposer un workspace</h2>
+    <h2 style="font-size: 25px;">Je souhaite proposer un workspace</h2>
   </div>
 </div>
 <div class="container">
@@ -86,42 +77,3 @@
       </div>
     </div>
 </div>
-
-<script>
-document.addEventListener('turbo:load', () => {
-  const searchInput = document.getElementById('search-input');
-  const searchForm = document.getElementById('search-form');
-  const searchQuery = document.getElementById('search-query');
-  let isSecondClick = false;
-
-  searchInput.addEventListener('click', () => {
-    if (!isSecondClick) {
-      isSecondClick = true;
-      return;
-    }
-
-    handleSubmit();
-  });
-
-  searchInput.addEventListener('keydown', (event) => {
-    if (event.key === 'Enter') {
-      event.preventDefault();
-      handleSubmit();
-    }
-  });
-
-  searchForm.addEventListener('submit', (event) => {
-    event.preventDefault();
-  });
-
-  function handleSubmit() {
-    const inputValue = searchInput.value.trim();
-    if (inputValue !== "") {
-      searchQuery.value = inputValue;
-      searchForm.submit();
-      searchForm.reset();
-      isSecondClick = false;
-    }
-  }
-});
-</script>
