--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,6 +1,12 @@
 <div class="container-fluid">
   <div class="mx-auto mt-4">
-    <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);"><%= @workspace.name %> <%= image_tag @workspace.user.photos.first, height: 50, width: 50, class: "avatar2", alt: "Photo" %></h1>
+    <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);"><%= @workspace.name %></h1>
+      <div>
+        <details>
+          <summary><%= image_tag @workspace.user.photos.first, height: 70, width: 70, class: "avatar2", alt: "Photo" %><i class="fa-solid fa-circle-chevron-left fa-xl" style="color: #004792;"></i></summary>
+          <p><%= @workspace.user.description %></p>
+        </details>
+      </div>
   </div>
   <div class="workspace-card">
     <div class="workspace-image">
@@ -9,11 +15,12 @@
       <%= render "heart" %>
     </div>
     <ul class="workspace-infos">
-      <div class="description-show">
+      <div class="description-adress-show">
         <%= @workspace.description %>
+
+
+        <li><i class="fa-solid fa-location-dot fa-xl" style="color: #004792;"></i>   <%= @workspace.address %> </li>
       </div>
-      <div class="d-flex justify-content-around">
-        <li><i class="fa-solid fa-location-dot fa-xl" style="color: #004792;"></i>   <%= @workspace.address %> </li></div>
        <div class="font-awesome d-flex justify-content-around">
         <li><% if @workspace.capacity == 1 %>
           <i class="fa-solid fa-user fa-2xl" style="color: #004792;"></i>
