--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -72,7 +72,17 @@
   margin-top: 20px;
   width: 20%;
 }
-.description-show {
+.description-adress-show {
+  margin-left: 1rem;
   margin-top: 10px;
   width: 100%;
+}
+
+summary {
+  list-style-type: none;
+  display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
