filtres css sur la home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -23,7 +23,7 @@
   width: 100%;
 }
 
-#search-input {
+.search-input {
   width: 90%;
   max-width: 500px;
   padding: 10px 20px;
@@ -32,7 +32,6 @@
   font-size: 16px;
   line-height: 20px;
   color: #575757;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: 95% center;
@@ -43,19 +42,29 @@
   transform-style: preserve-3d;
 
   &::placeholder {
-      color: rgba(0, 0, 0, 1);
-      letter-spacing: 1.1px;
+    color: rgba(0, 0, 0, 1);
+    letter-spacing: 1.1px;
   }
 
   &:hover,
   &:focus {
-      padding: 12px 0;
-      outline: 0;
-      border: 1px solid transparent;
-      border-bottom: 1px solid #575756;
-      border-radius: 0;
-      background-position: 100% center;
+    padding: 12px 0;
+    outline: 0;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #575756;
+    border-radius: 0;
+    background-position: 100% center;
   }
+}
+
+.btn-no-style{
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  margin-left: 1rem;
 }
 
 #search-button {
@@ -86,16 +95,13 @@
   font-size: 0.7rem;
   border-radius: 50rem;
   padding: 0.1rem 0.5rem;
-  background-color: #ECEAFF;
-  color: #7E73FF;
-  border: 1px solid #7E73FF;
+  color: #CAE4FF;
   margin-right: 0.6rem;
   margin-bottom: 0.4rem;
 }
 
 .tag-selector:checked + label {
-  background-color: #7E73FF;
-  color: white;
+  color: #004792;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
