--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container mt-10">
   <div class="row">
-    <div class="col-12 text-center logo-carr">
+    <div class="col-12 text-center logo-carr ">
       <img class="img-fluid" src="https://i.ibb.co/CBtyrxS/logo-coworkers-6.png" alt="Coworkers-Logo">
     </div>
   </div>
@@ -8,29 +8,41 @@
 
 <div class="container">
   <div class="row">
-      <form id="search-form" action="<%= workspaces_path %>" method="GET">
-        <div class="search-container">
-          <input type="text" id="search-input" class="search-input" placeholder="Où souhaitez-vous télétravailler?" name="query">
+      <h3 class="mt-4" style="font-size: 25px;">Je cherche un workspace</h3>
+        <div class="d-flex justify-content-between w-100 mt-0 form-group col-sm-8">
+          <div class="text-center">
+            <input type="checkbox" id="ambiance" name="ambiance" class="tag-selector" />
+            <label for="ambiance"> <i class="fa-solid fa-volume-high fa-2xl"> </i> </label>
+            <p>Ambiance</p>
+          </div>
+          <div class="text-center">
+            <input type="checkbox" id="internet_connexion" name="internet_connexion" class="tag-selector" />
+            <label for="internet_connexion"> <i class="fa-solid fa-wifi fa-2xl"></i> </label>
+            <p>Fibre</p>
+          </div>
+          <div class="text-center">
+            <input type="checkbox" id="smoking" name="smoking" class="tag-selector" />
+            <label for="smoking"> <i class="fa-solid fa-smoking fa-2xl"></i> </label>
+            <p>Fumeur</p>
+          </div>
+          <div class="text-center">
+            <input type="checkbox" id="animals" name="animals" class="tag-selector" />
+            <label for="animals"> <i class="fa-solid fa-dog fa-2xl"></i> </label>
+            <p>Animaux</p>
+          </div>
         </div>
-        <div class="form-group col-sm-8">
-          <input type="checkbox" id="ambiance" name="ambiance" class="tag-selector" />
-          <label for="ambiance"> <i class="fa-solid fa-volume-high fa-2xl" style="color: #CDCBD2;"> </i> </label>
-          <input type="checkbox" id="internet_connexion" name="internet_connexion" class="tag-selector" />
-          <label for="internet_connexion"> <i class="fa-solid fa-wifi fa-2xl" style="color: #004792;"></i> </label>
-          <input type="checkbox" id="smoking" name="smoking" class="tag-selector" />
-          <label for="smoking"> <i class="fa-solid fa-smoking fa-2xl" style="color: #004792;"></i> </label>
-          <input type="checkbox" id="animals" name="animals" class="tag-selector" />
-          <label for="animals"> <i class="fa-solid fa-dog fa-2xl" style="color: #004792;"></i> </label>
-          <input type="checkbox" id="skills" name="skills" class="tag-selector"/>
-          <label for="skills"> <i class="fa-solid fa-wrench fa-2xl" style="color: #004792;"></i> </label>
+              <form id="search-form" action="<%= workspaces_path %>" method="GET">
+        <div class="search-container align-items-center">
+          <input type="text" id="search-form" class="search-input" placeholder="Où souhaitez-vous télétravailler?" name="query">
+          <button class="btn-no-style" type="submit"><i class="fa-solid fa-magnifying-glass fa-2xl" style="color: #004792;"></i> </button>
         </div>
-        <button type="submit"> filtrer </button>
       </form>
     </div>
   </div>
+
 <div class="container">
   <div class="mt-4">
-    <h2 style="font-size: 25px;">Populaires</h2>
+    <h3 style="font-size: 25px;">Workspaces autour de moi</h3>
   </div>
 </div>
 <div class="container">
@@ -52,7 +64,7 @@
                     <div class="divider">
                     </div>
                     <p class="card__description">
-                      <%= workspace.ambiance %> | <%= workspace.smoking %> | <%= workspace.animals %>
+                      <%= workspace.ambiance %> | <%= workspace.smoking ? "Fumeur" : "Non fumeur" %> | <%= workspace.animals %>
                     </p>
                   </div>
                 </div>
@@ -65,9 +77,10 @@
     </div>
   </div>
 
+
 <div class="container">
   <div class="mt-3">
-    <h2 style="font-size: 25px;">Je souhaite proposer un workspace</h2>
+    <h3 style="font-size: 25px;">Je propose un workspace</h3>
   </div>
 </div>
 <div class="container">
