--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -20,6 +20,9 @@
 </div>
 <div class="container-fluid">
   <div class="row">
+    <% if @no_result %>
+      <p> Pas de résultat correspond à votre recherche</p>
+    <% end %>
     <!-- Pour mobiles, afficher d'abord la carte en haut -->
     <div class="col-12 d-md-none mb-5">
       <div style="width: 100%; height: 500px;"
