card+bookmarks+mapbox

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,8 @@ body {
 }
 
 .navbar{
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
   bottom: 10px;
   width: 100%;
