--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -12,9 +12,12 @@
   <div class="chat-container" data-controller="chatroom-subscription"
        data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
        data-chatroom-subscription-target="messages">
-    <% @chatroom.messages.each do |message| %>
-      <%= render "messages/message", message: message, current_user: current_user %>
-    <% end %>
+<% @chatroom.messages.each_with_index do |message, index| %>
+  <%= render "messages/message",
+             message: message,
+             current_user: current_user,
+             is_last: index == @chatroom.messages.length - 1 %>
+<% end %>
   </div>
 
   <div class="form-group msg-form">
@@ -37,6 +40,10 @@
       const messageContainer = event.target.closest('.message-container');
       if (!messageContainer) return;
 
+      if (messageContainer.id === 'last-message-container') {
+        container.dispatchEvent(new CustomEvent('lastMessageClicked', { bubbles: true }));
+      }
+
       const dateElement = messageContainer.querySelector('.message-date1, .message-date2');
       if (dateElement) {
         dateElement.style.display = dateElement.style.display === 'none' ? 'block' : 'none';
@@ -45,21 +52,8 @@
   });
 
   document.addEventListener("turbo:submit-end", (event) => {
-  if (event.target.id === 'chat-form') {
-    event.target.reset();
-  }
-});
-
-// document.addEventListener('turbo:load', () => {
-//   // Écouteur pour le focus sur le champ de texte
-//   document.getElementById('chat-text').addEventListener('focus', function() {
-//     document.querySelector('.navbar').style.display = 'none';
-//   });
-
-//   // Écouteur pour le blur sur le champ de texte
-//   document.getElementById('chat-text').addEventListener('blur', function() {
-//     document.querySelector('.navbar').style.display = 'block';
-//   });
-// });
-
+    if (event.target.id === 'chat-form') {
+      event.target.reset();
+    }
+  });
 </script>
