--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,9 +1,10 @@
-    <div class="col-lg-8 col-md-8 col-12">
+<div class="container text-center mt-4">
       <div class="mx-auto mt-4">
-        <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);">Mes favoris</h1>
-      </div>
-    </div>
-
+          <div class="chat-head">
+            <div class="chat-title">Mes favoris</div>
+            <div class="icon-bubble msg"> </div>
+          </div>
+      <div class="top-divider"> </div>
 
 <div class="container">
   <% @bookmarks.each do |bookmark| %>
