--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -4,7 +4,7 @@
             <div class="chat-title">Mes discussions</div>
             <div class="icon-bubble msg"> </div>
           </div>
-      <div class="chat-divider"> </div>
+      <div class="top-divider"> </div>
 <% @user1_chatrooms.each do |chatroom| %>
   <div class="chatroom mt-3">
     <%= link_to chatroom_path(chatroom) do %>
