--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,10 @@
-<div class ="titre-dashboard">
-<h1>Mon dashboard</h1>
-</div>
+<div class="container text-center mt-4">
+      <div class="mx-auto mt-4">
+          <div class="chat-head">
+            <div class="chat-title">Mon dashboard</div>
+            <div class="icon-bubble msg"> </div>
+          </div>
+      <div class="top-divider"> </div>
 
 <div class="container">
 
