--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,7 +1,11 @@
-<div class="container">
-  <div class="mx-auto mt-4">
-    <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);">Workspaces</h1>
-  </div>
+<div class="container text-center mt-4">
+      <div class="mx-auto mt-4">
+          <div class="chat-head">
+            <div class="chat-title">Workspaces disponibles</div>
+            <div class="icon-bubble msg"> </div>
+          </div>
+      <div class="top-divider"> </div>
+
 
   <div class="text-center mt-2 mb-3">
     <form id="search-form" action="<%= workspaces_path %>" method="GET">
