--- a/app/assets/stylesheets/components/_globals.scss
+++ b/app/assets/stylesheets/components/_globals.scss
@@ -16,6 +16,14 @@ a {
   height: 100vh;
 }
 
+.top-divider {
+  height: 2px;
+  width: 100%;
+  background: linear-gradient( 80deg, #c5c5c527, #ff810bb2);
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
 /* Pour les écrans plus grands (comme les ordinateurs de bureau) */
 @media (min-width: 768px) {
   .centered-container {
