--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -1,6 +1,11 @@
-<div class="titre-dashboard">
-  <h1>Mon profil</h1>
-</div>
+<div class="container text-center mt-4">
+      <div class="mx-auto mt-4">
+          <div class="chat-head">
+            <div class="chat-title">Mon dashboard</div>
+            <div class="icon-bubble msg"> </div>
+          </div>
+      <div class="top-divider"> </div>
+
 
 <div class="container-profile">
   <div class="card-product-dashboard-3">
