--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -12,8 +12,10 @@ font-family: "Montserrat";
     color: #004792;
   }
   H3{
+    font-family: "Montserrat";
     font-size: 16px;
-    margin: 0;
+    font-weight: bold;
+    margin-top: 20px;
     color: black;
   }
 }
