--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -4,7 +4,10 @@
 
 <div class="container-profile">
   <div class="card-product-dashboard-3">
-    <h2 class="profile-title">Mes informations</h2>
+        <%= link_to(edit_user_registration_path) do %>
+        <i class="fa-solid fa-pencil position-absolute top-20 end-40" style="color: #3F7CAF;"></i>
+        <% end %>
+
     <div class="profile-details">
       <div class="profile-details-left">
         <%= image_tag @my_workspaces.first.user.photos.first, class: "avatar-profile-details-dashboard", alt: "Photo" %>
@@ -21,35 +24,33 @@
           <a href="#" data-action="click->read-more#toggle">Lire plus</a>
         </div>
 
-        <%= link_to(edit_user_registration_path) do %>
-        <i class="fa-solid fa-pencil" style="color: #3F7CAF;"></i>
-        <% end %>
+
       </div>
     </div>
 
     <br>
 
     <h2 class="profile-title">Partage de skills</h2>
-    <h3>Mes skills à partager</h3>
-    <div class="profile-content">
-              <%= simple_form_for(@user, url: user_path(@user), method: :patch) do |f| %>
-          <%= f.input :skills, input_html: {value: current_user.skills.join(", "), class: "linkedin-form-1"}, label: 'Entrez un skill pour une meilleure expérience'%>
-          <%= f.submit "Valider"%>
-          <% end %>
-      <% if @user.skills.empty? %>
-    <p>vide</p>
-      <% else %>
+    <h3>Mes skills à partager <i class="fa-solid fa-wrench"></i></h3>
+      <div class="profile-content">
         <% @user.skills.each do |skill| %>
           <%= skill %>
-        <% end %>
-      <% end %>
+          <% end %>
+          <%= simple_form_for(@user, url: user_path(@user), method: :patch) do |f| %>
+          <%= f.input :skills, input_html: {value: current_user.skills.join(", "), class: "linkedin-form-1"}, label: 'Entrez un skill supplémentaire'%>
+          <%= f.submit "Valider"%>
+          <% end %>
     </div>
 
     <div class="profile-content">
       <h3>Skills recherchées</h3>
-      <% @user.desired_skills.each do |skill| %>
-        <%= skill %>
-      <% end %>
+        <% @user.desired_skills.each do |skill| %>
+        <%=  skill %>
+        <% end %>
+      <%= simple_form_for(@user, url: user_path(@user), method: :patch) do |f| %>
+          <%= f.input :desired_skills, input_html: {value: current_user.desired_skills.join(", "), class: "linkedin-form-1"}, label: 'Entrez un skill supplémentaire'%>
+          <%= f.submit "Valider"%>
+          <% end %>
     </div>
 
     <br>
