--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -44,7 +44,7 @@
     </a>
   <% end %>
 </div>
-
+</div>
 <script>
 document.addEventListener('turbo:load', function () {
   const searchInput = document.getElementById('search-input');
