--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -79,9 +79,14 @@
 
   <br>
 
-  <div class="yellow-btn">
-    <%= link_to "Ajouter un workspace", new_workspace_path %>
-  </div>
+<div class="container">
+    <div class="col-11 text-center">
+          <div class="col-11 text-center">
+            <a class="yellow-btn btn-home" href="<%= new_workspace_path %>">Ajouter un workspace</a>
+      </div>
+    </div>
+</div>
+
 </div>
 </div>
 </div>
