--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center mt-4">
+<div class="container mt-4">
       <div class="mx-auto mt-4">
           <div class="chat-head">
             <div class="chat-title">Mon dashboard</div>
