--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,16 @@
   width: 45%;
 }
 
+.icones{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.icone{
+  display: inline-block;
+}
+
 /* Sur les tablettes */
 @media (min-width: 908px) {
   .logo-carr {
@@ -91,7 +101,6 @@
 
 .tag-selector + label {
   cursor: pointer;
-  display: inline-block;
   font-size: 0.7rem;
   border-radius: 50rem;
   padding: 0.1rem 0.5rem;
