--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -17,8 +17,9 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   align-items: center;
   border-radius: 15px;
-  margin: 20px;
-  padding: 20px;
+  margin: 10px;
+  margin-top: 20px;
+  padding: 10px;
   ul {
     margin: 0;
     padding: 0;
@@ -52,9 +53,8 @@
     color: orange;
     text-decoration: none;
   }
-  margin-left: 10px;
-  margin-top: 20px;
   width: 65%;
+  display: flex;
 }
 
 
@@ -94,6 +94,7 @@
 
 .reservation-details-left {
   margin-top: 20px;
+  margin-right: 10px;
   width: 60%;
 }
 
