--- a/app/assets/stylesheets/components/_profil.scss
+++ b/app/assets/stylesheets/components/_profil.scss
@@ -4,7 +4,7 @@
   }
 
   .container-profile{
-    margin: 20px;
+    margin: 0px;
     h2{
       font-size: 20px;
       font-weight: bold;
@@ -31,6 +31,7 @@
   }
 
   .profile-content{
+    margin-top: 5px;
     font-family: "Montserrat";
     font-size: 16px;
   }
@@ -63,3 +64,10 @@
       }
   }
 
+  .profile-name{
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 20px;
+    color: black;
+  }
